# PGPy

./: .readthedocs.yaml  HACKING.rst  README.rst  install_dependencies.linux.sh  install_dependencies.osx.sh  pyproject.toml  requirements-rtd.txt  setup.cfg  source_date_epoch  tox.ini
.github/workflows/: build-wheel.yml  tests.yml
docs/source/: changelog.rst
pgpy/: _curves.py  constants.py
tests/: test_10_exceptions.py
